--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
+    "version": 2,
     "builds":[
         {
-            "src":"app.py",
+            "src":"./index.py",
             "use":"@vercel/python"
         }
     ],
